--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: slides
 Type: Package
-Title: Creates a set of templates for 'xaringan' slides 
-Version: 0.5.0
+Title: Creates a set of templates for 'quarto' and 'xaringan' slides 
+Version: 0.6.0
 Authors@R: c(
     person("Gianluca", "Baio", role = c("aut", "cre"), email = "g.baio@ucl.ac.uk", comment = c(ORCID = "0000-0003-4314-2570")),
     # contributors ordered alphabetically below 
     person("Cara", "Thompson", role = "ctb", comment = c(ORCID = "XXXX-XXXX-XXXX-XXXX"))
     )
-Maintainer: The package maintainer <g.baio@ucl.ac.uk>
-Description: The package creates a set of templates for 'xaringan' slides
-    to be used for academic presentations. 
+Maintainer: Gianluca Baio <g.baio@ucl.ac.uk>
+Description: The package creates a set of templates for 'quarto' and 'xaringan' 
+    slides to be used for academic presentations. 
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
