Separates out common css from specific to each extension (needs work for sampdoria)

--- a/inst/quarto/_extensions/gb/_extension.yml
+++ b/inst/quarto/_extensions/gb/_extension.yml
@@ -5,6 +5,7 @@ version: 1.0.0
 contributes:
   formats:
     revealjs:
+      css: ./assets/common.css
       template-partials:
           - title-slide.html
       include-in-header:
