--- a/inst/quarto/_extensions/gb/_extension.yml
+++ b/inst/quarto/_extensions/gb/_extension.yml
@@ -21,3 +21,4 @@ contributes:
       title-slide-attributes:
       data-background-size: stretch
       data-background-opacity: "0.08"
+      footer: "{{< meta footer-content >}}"
