--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: slides
 Type: Package
 Title: Creates a set of templates for 'quarto' and 'xaringan' slides 
-Version: 0.6.0
+Version: 0.7.0
 Authors@R: c(
     person("Gianluca", "Baio", role = c("aut", "cre"), email = "g.baio@ucl.ac.uk", comment = c(ORCID = "0000-0003-4314-2570")),
     # contributors ordered alphabetically below 
-    person("Cara", "Thompson", role = "ctb", comment = c(ORCID = "XXXX-XXXX-XXXX-XXXX"))
+    person("Cara", "Thompson", role = "ctb")
     )
 Maintainer: Gianluca Baio <g.baio@ucl.ac.uk>
 Description: The package creates a set of templates for 'quarto' and 'xaringan' 
@@ -21,4 +21,4 @@ Imports:
    RefManageR,
    tikzDevice,
    fontawesome
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2.9000
